[package]
name = "fishtank"
version = "0.1.0"
authors = ["c <null>"]
edition = "2018"

[[bin]]
name = "fishtank"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4"
imgui-wgpu = "0.9"
imgui-winit-support = { version = "0.4", default-features = false, features = ["winit-22"] }
log = "0.4"
winit = "0.22"
winit_input_helper = "0.6"
pixels = "0.2"
rand = "*"
derive-new = "0.5"

[profile.dev]
opt-level = 1